# Xtract

./: .gitignore  README.md  pyproject.toml  test_results_summary.md  transpiler_report.md
.github/workflows/: ci.yml
docs/: DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md
legacy/: simplified_transpiler.py
tests/: test_transpiler_core.py
xtract/: __init__.py  cli.py  transpiler.py
