[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xtract"
version = "0.1.0"
description = "Solidity → MultiversX Rust transpiler (core subset)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "XTract Contributors" }
]
dependencies = [
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
xtract = "xtract.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["xtract*"]


